fixed issue in spacing between sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,7 @@ pre {
 
 .documentation-container,.codesnippet-container,.example-container,.help-container{
     background-color: grey;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-top: 10px;
     margin-left: 4%;
     margin-right: 4%;
     height: auto;
